[package]
name = "dtx"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "native-tls-vendored"] }
sha2 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
zip = "2.2"
flate2 = "1.0"
tar = "0.4"

[profile.release]
strip = true
lto = true
